Fixed element overlapping issue.

--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ button{
 
     /* to center button */
     position: absolute;
-    top: 70%;
+    /* position: relative; */
+    /* top: 90%; */
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-70px, 190px);
 }
 
 .container{
@@ -38,9 +39,13 @@ button{
     
     /* to center */
     position: absolute;
-    top: 45%;
+    /* top: 45%; */
+    /* position: relative; */
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -15%); 
+    
+    /* text-align: center; */
+    /* transform: translateY(90%); */
     visibility: hidden;
 }
 input{
@@ -70,7 +75,10 @@ input{
 } */
 #breakInputContainer{
     /* background-color: cornflowerblue; */
-    visibility: hidden;
+    /* position: relative;
+    left: 50%;
+    transform: translate(-151%, 0%); */
+    visibility: hidden; 
 }
 
 #leftArrow{
@@ -112,18 +120,21 @@ input{
     background-color: #FFCB12;
 
     position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* position: relative; */
+    /* top: 80%; */
+    /* left: -50%; */
+    transform: translate(-25px,270px);
+    /* transform: translate(0%, 0%); */
     visibility: hidden;
 }
 #btnBreak{
     background-color: #676767;
 
     position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* top: 90%; */
+    /* left: 50%; */
+    transform: translate(70px, 190px);
+    /* transform: translateX(100px) */
     visibility: hidden;
 }
 
@@ -132,8 +143,11 @@ input{
     /* background-color: #6767671b; */
 
     /* to center timer */
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* position: absolute; */
+    /* top: 45%; */
+    /* left: 50%; */
+
+    position: relative;
+    text-align: center;
+    transform: translateY(90%);
 }
